--- a/Form/css/style.css
+++ b/Form/css/style.css
@@ -1,6 +1,3 @@
-
-
-
 body {
     background-color: black;
     color: white;
@@ -34,15 +31,19 @@ body {
 #table-styles {
     color: white !important;
 }
+
 button:hover {
-  scale: 1.1;
-  letter-spacing: 1px;
-  font-weight: 700;
+    scale: 1.1;
+    letter-spacing: 1px;
+    font-weight: 700;
 }
-tr{
-    td:nth-child(4){
+
+tr {
+    td:nth-child(4) {
         display: flex;
         width: 200px;
         overflow-x: auto;
     }
 }
+
+@media only screen and (max-width: 768px) {}
